feat: :sparkles: add hero section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
   </head>
   <body>
+    <!-- navbar -->
     <div class="nav container-fluid">
       <div class="container">
         <div class="nav-left">
@@ -77,6 +78,19 @@
           <button class="button request">Submit a request</button>
           <button class="button sign-in">Sign in</button>
         </div>
+      </div>
+    </div>
+
+    <!-- main -->
+    <div class="main container-fluid text-center">
+      <div class="text">How can we help?</div>
+      <div class="search">
+        <input
+          type="text"
+          name="search"
+          placeholder="Search"
+          class="rounded-1"
+        />
       </div>
     </div>
   </body>
