feat: :sparkles: add main section, fill it in with content

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       </div>
     </div>
 
-    <!-- main -->
-    <div class="main container-fluid text-center">
+    <!-- hero -->
+    <div class="hero container-fluid text-center">
       <div class="text">How can we help?</div>
       <div class="search">
         <input
@@ -91,6 +91,105 @@
           placeholder="Search"
           class="rounded-1"
         />
+      </div>
+    </div>
+
+    <!-- main -->
+    <div class="main container">
+      <div class="content-block">
+        <div class="content-left">
+          <img src="./img/using.png" alt="logo" />
+        </div>
+        <div class="content-right">
+          <div class="heading">
+            <h2>Using Abstract</h2>
+          </div>
+          <div class="paragraph">
+            Abstract lets you manage, version, and document your designs in one
+            place.
+          </div>
+          <div class="link">
+            <a href="#">Learn More →</a>
+          </div>
+        </div>
+      </div>
+      <div class="content-block">
+        <div class="content-left">
+          <img src="./img/ppl.png" alt="logo" />
+        </div>
+        <div class="content-right">
+          <div class="heading">
+            <h2>Manage your account</h2>
+          </div>
+          <div class="paragraph">
+            Configure your account settings, such as your email, profile
+            details, and password.
+          </div>
+          <div class="link">
+            <a href="#">Learn More →</a>
+          </div>
+        </div>
+      </div>
+      <div class="content-block">
+        <div class="content-left">
+          <img src="./img/puzzle.png" alt="logo" />
+        </div>
+        <div class="content-right">
+          <div class="heading">
+            <h2>Manage organizations, teams, and projects</h2>
+          </div>
+          <div class="paragraph">
+            Use Abstract organizations, teams, and projects to organize your
+            people and your work.
+          </div>
+          <div class="link">
+            <a href="#">Learn More →</a>
+          </div>
+        </div>
+      </div>
+      <div class="content-block">
+        <div class="content-left">
+          <img src="./img/dolla.png" alt="logo" />
+        </div>
+        <div class="content-right">
+          <div class="heading">
+            <h2>Manage billing</h2>
+          </div>
+          <div class="paragraph">Change subscriptions and payment details.</div>
+          <div class="link">
+            <a href="#">Learn More →</a>
+          </div>
+        </div>
+      </div>
+      <div class="content-block">
+        <div class="content-left">
+          <img src="./img/key.png" alt="logo" />
+        </div>
+        <div class="content-right">
+          <div class="heading">
+            <h2>Authenticate to Abstract</h2>
+          </div>
+          <div class="paragraph">
+            Set up and configure SSO, SCIM, and Just-in-Time provisioning.
+          </div>
+          <div class="link">
+            <a href="#">Learn More →</a>
+          </div>
+        </div>
+      </div>
+      <div class="content-block">
+        <div class="content-left">
+          <img src="./img/chit-chat.png" alt="logo" />
+        </div>
+        <div class="content-right">
+          <div class="heading">
+            <h2>Abstract support</h2>
+          </div>
+          <div class="paragraph">Get in touch with a human.</div>
+          <div class="link">
+            <a href="#">Learn More →</a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
