style: :lipstick: minor style changes

--- a/index.html
+++ b/index.html
@@ -192,5 +192,21 @@
         </div>
       </div>
     </div>
+
+    <!-- footer -->
+    <footer>
+      <div class="footer-content container-fluid">
+        <div class="footer-content-section">
+          <div class="heading">Abstract</div>
+          <a href="#">Start Trial</a>
+          <a href="#">Pricing</a>
+          <a href="#">Download</a>
+        </div>
+        <div class="footer-content-section"></div>
+        <div class="footer-content-section"></div>
+        <div class="footer-content-section"></div>
+        <div class="footer-content-section"></div>
+      </div>
+    </footer>
   </body>
 </html>
