--- a/index.html
+++ b/index.html
@@ -194,19 +194,57 @@
     </div>
 
     <!-- footer -->
-    <footer>
-      <div class="footer-content container-fluid">
-        <div class="footer-content-section">
-          <div class="heading">Abstract</div>
-          <a href="#">Start Trial</a>
-          <a href="#">Pricing</a>
-          <a href="#">Download</a>
-        </div>
-        <div class="footer-content-section"></div>
-        <div class="footer-content-section"></div>
-        <div class="footer-content-section"></div>
-        <div class="footer-content-section"></div>
+    <div class="footer">
+      <div class="links-container">
+        <h2>Abstract</h2>
+        <a href="#">Start Trial</a>
+        <a href="#">Pricing</a>
+        <a href="#">Download</a>
       </div>
-    </footer>
+      <div class="links-container">
+        <h2>Resources</h2>
+        <a href="#">Blog</a>
+        <a href="#">Help Center</a>
+        <a href="#">Release Notes</a>
+        <a href="#">Status</a>
+      </div>
+      <div class="links-container">
+        <h2>Community</h2>
+        <a href="#">Twitter</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Facebook</a>
+        <a href="#">Dribbble</a>
+        <a href="#">Podcast</a>
+      </div>
+      <div class="links-container">
+        <h2>Company</h2>
+        <a href="#">About Us</a>
+        <a href="#">Career</a>
+        <a href="#">Legal</a>
+        <div class="heading-sm">Contact Us</div>
+        <a href="mailto:info@abstract.com">info@abstract.com</a>
+        <a href="https://github.com/seesmof">github/seesmof</a>
+      </div>
+      <div class="links-container">
+        <div class="img">
+          <svg
+            class="abstract-logo-footer"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 200 51"
+            preserveAspectRatio="xMinYMid slice"
+          >
+            <g class="abstract-logo-mark-footer" fill="#fff">
+              <path
+                d="M25.41 0C5.08 0 0 5.08 0 25.41s5.08 25.41 25.41 25.41 25.41-5.08 25.41-25.41S45.74 0 25.41 0zm-4.17 39.31A9.73 9.73 0 1 1 31 29.58a9.75 9.75 0 0 1-9.76 9.73zm17.67-.4h-4.77V16.67H11.91v-4.76h27z"
+              ></path>
+              <circle cx="21.24" cy="29.58" r="4.96"></circle>
+            </g>
+          </svg>
+        </div>
+        <div class="txt">© Copyright 2022</div>
+        <div class="txt">Abstract Studio Design, Inc.</div>
+        <div class="txt">All rights reserved</div>
+      </div>
+    </div>
   </body>
 </html>
